--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
-    "firebase": "^12.2.1",
+    "@tanstack/react-query": "^5.89.0",
+    "axios": "^1.12.2",
+    "firebase": "^12.3.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^6.30.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
