--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.21",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
+    "terser": "^5.44.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.2",
